dos parrafos mas + verdana

--- a/blogpost.html
+++ b/blogpost.html
@@ -11,10 +11,12 @@
         
    
     <h1>
-        Aqui esta mi blog
+        Hola, aqui esta mi blog
     </h1>
-    <p>primer parrafo asdasdasdasdasdasdasdsadasd</p>
-    <p>segundo parrafo asdasdasdasdasdasdasdasdasd</p>
+    <p>primer parrafo hasdasdasdasdasdasdasdsadasd</p>
+    <p>segundo parrafo asdahsdasdasdasdasdasdasdasd</p>
+    <p>tercer parrafo asdasdasdhasdasdasdasdasdasd</p>
+    <p>cuarto parrafo ashdasdasdasdasdasdasdasdasd</p>
 
 </div>
 </body>
